# prayer

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/: alembic.ini  main.py
backend/alembic/versions/: 0c968e822101_add_provider_id_user.py  21bbd2935b32_update_user_table.py  533fe32fe0e4_update_verse_rec.py  956438a471a7_add_new_column_to_user.py  ac0e3bfc156c_added_prayer_wall_invites.py  b8b8a62db1e8_added_prayer_verse_recommendation.py  b9a0af5cf309_first_migrations.py  f6d198eb7b00_initial_migrations.py  fe3e4b008e08_update_verse_to_encouragement.py
backend/app/api/: api.py
backend/app/api/routes/: auth.py  notifications.py  prayer_walls.py  prayers.py
backend/app/config/: apple_push.py  config.py  llm.py
backend/app/db/: database.py
backend/app/models/: models.py
backend/app/schemas/: api.py  auth.py  llm.py  notifications.py  prayer_walls.py  prayers.py
backend/app/services/: auth.py  notifications.py  prayer_walls.py  prayers.py  prompts.py  stt.py  util.py  verse_recommendations.py
backend/config/: config.py
backend/test/: prompts.py  retrieve.py  state.py  vectorize.py
